--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Test</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    	
-		</div><!-- /.container -->
-		<footer>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Test
+---
+<div>
+	<h1>Test</h1>
+</div>
